[project]
name = "pypubmed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lescientifik", email = "theophraste.henry@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
