[project]
name = "pypubmed"
version = "0.1.0"
description = "Simple Python client for the PubMed API"
readme = "README.md"
authors = [
    { name = "lescientifik", email = "theophraste.henry@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
