[project]
name = "pypubmed"
version = "0.1.0"
description = "Simple Python client for the PubMed API"
readme = "README.md"
authors = [
    { name = "lescientifik", email = "theophraste.henry@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "requests>=2.32.5",
]

[project.scripts]
pypubmed = "pypubmed.__main__:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default, run with -m slow)",
]
